Complete Substrates implementation and reorganize as Java monorepo
## Substrates Implementation - Production Ready

### New Features & Documentation
- Add LICENSE (Apache 2.0) and NOTICE files with proper attribution to William Louth
- Add IMPLEMENTATION_VERIFICATION.md - comprehensive verification document
- Add 264 comprehensive tests (all passing)
- Add CaptureImpl, ConduitImplTest, SinkImplTest, and integration tests

### Architecture Fixes
- Fix Container caching - now cached by (Name, Composer) like Conduit
- Fix Source encapsulation - move subscriber notification into SourceImpl.notifySubscribers()
- Fix hierarchical naming consistency across all components
- Remove getSubscribers() API violation

### Code Quality
- Update all documentation to reflect blog post alignment
- Add proper attribution to William Louth and Humainary throughout
- Update pom.xml with license, contributors, and SCM metadata
- Remove obsolete alignment documents (moved to docs/alignment/)

## Repository Reorganization

### Moved Projects
- Move fullerstack-serventis-java to kafka-obs repository
- Move kafka-fullerstack to kafka-obs repository
- Remove analysis documents (DEPLOYMENT_STRATEGY.md, etc.)

### Repository Focus
- Reorganize as general-purpose Java monorepo
- Update README to reflect "collection of Java libraries"
- Clean pom.xml to be project-agnostic
- Position for future Java projects beyond Substrates

## Substrates Status
✅ Production-ready
✅ 264 tests passing
✅ Full API compliance verified
✅ Apache 2.0 licensed
✅ Complete attribution to William Louth (Humainary)